Fixing spacing for hero

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -48,6 +48,7 @@ div.hero {
 		padding-top: rem-calc(20);
 	}
 	.tagline {
+		padding-top: rem-calc(70);
 		padding-bottom: rem-calc(20);
 	}
 	h1, h2, h3, h4, h5 {
